--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
     <title>Awax</title>
 </head>
 <body>
-    <header class="header-bar">
-        <a href="index.html"><img class="site-icon" src="assets/icons/logo-awax.png" alt="Logo do Site"></a>
-
-        <ul class="menu-list">
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Services</li>
-            <li>Our Projects</li>
-            <li>Our Team</li>
-            <li>Happy Clients</li>
-            <li>Price</li>
-            <li>Some Facts</li>
-            <li>Contact Us</li>
-        </ul>
+    <header>
+        <div class="container header-container">
+            <a href="index.html"><img class="site-icon" src="assets/icons/logo-awax.png" alt="Logo do Site"></a>
+            <nav>
+                <ul class="menu-list">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Our Projects</a></li>
+                    <li><a href="">Our Team</a></li>
+                    <li><a href="">Happy Clients</a></li>
+                    <li><a href="">Price</a></li>
+                    <li><a href="">Some Facts</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    <main>
+        <div class="container"></div>
+    </main>
+    <footer>
+        <div class="container"></div>
+    </footer>
     
 </body>
 </html>
