add slider effetc

--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
             </div>
 
             <div class="slider-pointers">
-                <div class="points active"></div>
-                <div class="points"></div>
-                <div class="points"></div>
+                <div class="points point-one point-active"></div>
+                <div class="points point-two"></div>
+                <div class="points point-three"></div>
             </div>
         </section>
     </main>
     <footer>
     </footer>
     
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
