--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
                 <div class="points point-three"></div>
             </div>
         </section>
+
+        <section id="about">
+            <div class="container about-cont">
+                
+            </div>
+        </section>
+        <section id="services">
+            <div class="container services-cont">
+
+            </div>
+        </section>
     </main>
     <footer>
     </footer>
