--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
             </div>
         </section>
 
+        <section class="default light">
+            <h2 class="section-title">About Us</h2>
+            <h3 class="section-desc">Who we are?</h3>
+            <div class="section-body container">
+                <div class="section-aboutus">
+                    <div class="section-aboutus-left">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque quisquam quaerat officiis! Recusandae, iusto, ex quisquam eaque ullam rem atque nostrum error iste doloremque itaque quae quo laudantium? Recusandae, eaque.</p>
+
+                        <a href="">Learn More</a>
+                        </div>
+                    <div class="section-aboutus-right"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
     </footer>
