--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         
                         <h2> call us: + (00) 01234 5678</h2>
 
-                        <button> get in touch!</button>
+                        <a class="button"> get in touch!</a>
                     </div>   
                 </div>
 
@@ -251,7 +251,7 @@
             <div class="our-team-background">
                 <h2 class="section-title">Our Team</h2>
                 <h3 class="section-desc">Our Co-Workers</h3>
-                <div class="section-body sliders">
+                <div class="section-body sliders-team">
                     <div class="team-photos slide">
                         <div class="person-team-photo">
                             <img src="media/mulher1.png" alt="">
@@ -298,11 +298,105 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="slider-pointers">
-                        <div class="points point-one point-active"></div>
-                        <div class="points point-two"></div>
-                        <div class="points point-three"></div>
+
+                    <div class="team-photos slide">
+                        <div class="person-team-photo">
+                            <img src="media/mulher1.png" alt="">
+                            <h5>Jane Doe</h5>
+                            <h6>Master Mind</h6>
+                            <div class="social-media-person">
+                                <span><img src="assets/icons/twitter.png"></span>
+                                <span><img src="assets/icons/instagram.png"></span>
+                                <span><img src="assets/icons/linkedin.png"></span>
+                                <span><img src="assets/icons/facebook.png"></span>
+                                <span><img src="assets/icons/youtube (1).png"></span>
+                                <span><img src="assets/icons/googleplus.png"></span>
+                                <span><img src="assets/icons/mais-opcoes.png"></span>
+                            </div>
+                        </div>
+
+                        <div class="person-team-photo">
+                                <img src="media/homem1.png" alt="">
+                                <h5>Mike Shiller</h5>
+                                <h6>Creative Head</h6>
+                                <div class="social-media-person">
+                                    <span><img src="assets/icons/twitter.png"></span>
+                                    <span><img src="assets/icons/instagram.png"></span>
+                                    <span><img src="assets/icons/linkedin.png"></span>
+                                    <span><img src="assets/icons/facebook.png"></span>
+                                    <span><img src="assets/icons/youtube (1).png"></span>
+                                    <span><img src="assets/icons/googleplus.png"></span>
+                                    <span><img src="assets/icons/mais-opcoes.png"></span>
+                                </div>
+                        </div>
+
+                        <div class="person-team-photo">
+                                <img src="media/mulher2.png" alt="">
+                                <h5>Anna Johns</h5>
+                                <h6>Technical lead</h6>
+                                <div class="social-media-person">
+                                    <span><img src="assets/icons/twitter.png"></span>
+                                    <span><img src="assets/icons/instagram.png"></span>
+                                    <span><img src="assets/icons/linkedin.png"></span>
+                                    <span><img src="assets/icons/facebook.png"></span>
+                                    <span><img src="assets/icons/youtube (1).png"></span>
+                                    <span><img src="assets/icons/googleplus.png"></span>
+                                    <span><img src="assets/icons/mais-opcoes.png"></span>
+                                </div>
+                        </div>
                     </div>
+
+                    <div class="team-photos slide">
+                        <div class="person-team-photo">
+                            <img src="media/mulher1.png" alt="">
+                            <h5>Jane Doe</h5>
+                            <h6>Master Mind</h6>
+                            <div class="social-media-person">
+                                <span><img src="assets/icons/twitter.png"></span>
+                                <span><img src="assets/icons/instagram.png"></span>
+                                <span><img src="assets/icons/linkedin.png"></span>
+                                <span><img src="assets/icons/facebook.png"></span>
+                                <span><img src="assets/icons/youtube (1).png"></span>
+                                <span><img src="assets/icons/googleplus.png"></span>
+                                <span><img src="assets/icons/mais-opcoes.png"></span>
+                            </div>
+                        </div>
+
+                        <div class="person-team-photo">
+                                <img src="media/homem1.png" alt="">
+                                <h5>Mike Shiller</h5>
+                                <h6>Creative Head</h6>
+                                <div class="social-media-person">
+                                    <span><img src="assets/icons/twitter.png"></span>
+                                    <span><img src="assets/icons/instagram.png"></span>
+                                    <span><img src="assets/icons/linkedin.png"></span>
+                                    <span><img src="assets/icons/facebook.png"></span>
+                                    <span><img src="assets/icons/youtube (1).png"></span>
+                                    <span><img src="assets/icons/googleplus.png"></span>
+                                    <span><img src="assets/icons/mais-opcoes.png"></span>
+                                </div>
+                        </div>
+
+                        <div class="person-team-photo">
+                                <img src="media/mulher2.png" alt="">
+                                <h5>Anna Johns</h5>
+                                <h6>Technical lead</h6>
+                                <div class="social-media-person">
+                                    <span><img src="assets/icons/twitter.png"></span>
+                                    <span><img src="assets/icons/instagram.png"></span>
+                                    <span><img src="assets/icons/linkedin.png"></span>
+                                    <span><img src="assets/icons/facebook.png"></span>
+                                    <span><img src="assets/icons/youtube (1).png"></span>
+                                    <span><img src="assets/icons/googleplus.png"></span>
+                                    <span><img src="assets/icons/mais-opcoes.png"></span>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-pointers">
+                    <div class="points point-one-team point-active-team"></div>
+                    <div class="points point-two-team"></div>
+                    <div class="points point-three-team"></div>
                 </div>
             </div>
         </section>
