--- a/index.html
+++ b/index.html
@@ -298,100 +298,6 @@
                                 </div>
                         </div>
                     </div>
-
-                    <div class="team-photos slide">
-                        <div class="person-team-photo">
-                            <img src="media/mulher1.png" alt="">
-                            <h5>Jane Doe</h5>
-                            <h6>Master Mind</h6>
-                            <div class="social-media-person">
-                                <span><img src="assets/icons/twitter.png"></span>
-                                <span><img src="assets/icons/instagram.png"></span>
-                                <span><img src="assets/icons/linkedin.png"></span>
-                                <span><img src="assets/icons/facebook.png"></span>
-                                <span><img src="assets/icons/youtube (1).png"></span>
-                                <span><img src="assets/icons/googleplus.png"></span>
-                                <span><img src="assets/icons/mais-opcoes.png"></span>
-                            </div>
-                        </div>
-
-                        <div class="person-team-photo">
-                                <img src="media/homem1.png" alt="">
-                                <h5>Mike Shiller</h5>
-                                <h6>Creative Head</h6>
-                                <div class="social-media-person">
-                                    <span><img src="assets/icons/twitter.png"></span>
-                                    <span><img src="assets/icons/instagram.png"></span>
-                                    <span><img src="assets/icons/linkedin.png"></span>
-                                    <span><img src="assets/icons/facebook.png"></span>
-                                    <span><img src="assets/icons/youtube (1).png"></span>
-                                    <span><img src="assets/icons/googleplus.png"></span>
-                                    <span><img src="assets/icons/mais-opcoes.png"></span>
-                                </div>
-                        </div>
-
-                        <div class="person-team-photo">
-                                <img src="media/mulher2.png" alt="">
-                                <h5>Anna Johns</h5>
-                                <h6>Technical lead</h6>
-                                <div class="social-media-person">
-                                    <span><img src="assets/icons/twitter.png"></span>
-                                    <span><img src="assets/icons/instagram.png"></span>
-                                    <span><img src="assets/icons/linkedin.png"></span>
-                                    <span><img src="assets/icons/facebook.png"></span>
-                                    <span><img src="assets/icons/youtube (1).png"></span>
-                                    <span><img src="assets/icons/googleplus.png"></span>
-                                    <span><img src="assets/icons/mais-opcoes.png"></span>
-                                </div>
-                        </div>
-                    </div>
-
-                    <div class="team-photos slide">
-                        <div class="person-team-photo">
-                            <img src="media/mulher1.png" alt="">
-                            <h5>Jane Doe</h5>
-                            <h6>Master Mind</h6>
-                            <div class="social-media-person">
-                                <span><img src="assets/icons/twitter.png"></span>
-                                <span><img src="assets/icons/instagram.png"></span>
-                                <span><img src="assets/icons/linkedin.png"></span>
-                                <span><img src="assets/icons/facebook.png"></span>
-                                <span><img src="assets/icons/youtube (1).png"></span>
-                                <span><img src="assets/icons/googleplus.png"></span>
-                                <span><img src="assets/icons/mais-opcoes.png"></span>
-                            </div>
-                        </div>
-
-                        <div class="person-team-photo">
-                                <img src="media/homem1.png" alt="">
-                                <h5>Mike Shiller</h5>
-                                <h6>Creative Head</h6>
-                                <div class="social-media-person">
-                                    <span><img src="assets/icons/twitter.png"></span>
-                                    <span><img src="assets/icons/instagram.png"></span>
-                                    <span><img src="assets/icons/linkedin.png"></span>
-                                    <span><img src="assets/icons/facebook.png"></span>
-                                    <span><img src="assets/icons/youtube (1).png"></span>
-                                    <span><img src="assets/icons/googleplus.png"></span>
-                                    <span><img src="assets/icons/mais-opcoes.png"></span>
-                                </div>
-                        </div>
-
-                        <div class="person-team-photo">
-                                <img src="media/mulher2.png" alt="">
-                                <h5>Anna Johns</h5>
-                                <h6>Technical lead</h6>
-                                <div class="social-media-person">
-                                    <span><img src="assets/icons/twitter.png"></span>
-                                    <span><img src="assets/icons/instagram.png"></span>
-                                    <span><img src="assets/icons/linkedin.png"></span>
-                                    <span><img src="assets/icons/facebook.png"></span>
-                                    <span><img src="assets/icons/youtube (1).png"></span>
-                                    <span><img src="assets/icons/googleplus.png"></span>
-                                    <span><img src="assets/icons/mais-opcoes.png"></span>
-                                </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="slider-pointers">
                     <div class="points point-one-team point-active-team"></div>
@@ -401,6 +307,140 @@
             </div>
         </section>
 
+        <section class="default light">
+            <h2 class="section-title">Happy Clients</h2>
+            <h3 class="section-desc">Clients Review</h3>
+            <div class="section-body section-clients">
+                <div class="clients-slider ">
+                    <div class="clients container">
+                        <img src="media/homem2.png" alt="Foto de um homem de pele branca e cabelo loiro">
+                        <h5>John Doe</h5>
+                        <h6>Head of PR Department</h6>                            
+                        <span><img src="assets/icons/quote.png" alt="Quote"></span>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita non deserunt ea ex vel esse tempora ratione? Cum eaque architecto quas, vitae aut nisi at delectus doloremque? Deserunt, asperiores. Nemo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quo tempore consequuntur illo id, error necessitatibus odio nihil officia nisi. Expedita reiciendis illo quas non, consectetur dolor autem laboriosam quisquam.</p>
+                    </div>
+                </div>
+
+                <div class="slider-pointers">
+                    <div class="points point-one-client point-active-client"></div>
+                    <div class="points point-two-client"></div>
+                    <div class="points point-three-client"></div>
+                </div>
+        </section>
+
+        <section class=" white-section">
+            <div class="container branding-section">
+                <img src="media/empresa1.png" alt="Logo da Empresa">
+                <img src="media/empresa2.png" alt="Logo da Empresa">
+                <img src="media/empresa3.png" alt="Logo da Empresa">
+                <img src="media/empresa4.png" alt="Logo da Empresa">
+                <img src="media/empresa5.png" alt="Logo da Empresa">
+                <img src="media/empresa6.png" alt="Logo da Empresa">
+            </div>
+        </section>
+
+        <section class="default light">
+            <h2 class="section-title">Price</h2>
+            <h3 class="section-desc">Pricing Table</h3>
+            <div class="section-body container">
+                <div class="section-price">
+                    <div class="price">
+                        <h6>Express</h6>
+                        <em>$ 9.99</em>
+                        <p>/ Month</p>
+                        <ul>
+                            <li>Tracking isssues <br/><span>_</span></li>
+                            <li>Add bugs through email <br/><span>_</span></li>
+                            <li>Notifications <br/><span>_</span></li>
+                            <li>Time tracking <br/><span>_</span></li>
+                            <li>Custom views</li>
+                        </ul>
+                        <a href="" class="button-price">Choose</a>
+                    </div>
+
+                    <div class="price">
+                        <h6>Standart</h6>
+                        <em>$ 14.99</em>
+                        <p>/ Month</p>
+                        <ul>
+                            <li>Tracking isssues <br/><span>_</span></li>
+                            <li>Add bugs through email <br/><span>_</span></li>
+                            <li>Notifications <br/><span>_</span></li>
+                            <li>Time tracking <br/><span>_</span></li>
+                            <li>Custom views</li>
+                        </ul>
+                        <a href="" class="button-price">Choose</a>
+                    </div>
+
+                    <div class="price">
+                        <h6>Luxe</h6>
+                        <em>$ 19.99</em>
+                        <p>/ Month</p>
+                        <ul>
+                            <li>Tracking isssues <br/><span>_</span></li>
+                            <li>Add bugs through email <br/><span>_</span></li>
+                            <li>Notifications <br/><span>_</span></li>
+                            <li>Time tracking <br/><span>_</span></li>
+                            <li>Custom views</li>
+                        </ul>
+                        <a href="" class="button-price">Choose</a>
+                    </div>
+
+                    <div class="price">
+                        <h6>Premium</h6>
+                        <em>$ 24.99</em>
+                        <p>/ Month</p>
+                        <ul>
+                            <li>Tracking isssues <br/><span>_</span></li>
+                            <li>Add bugs through email <br/><span>_</span></li>
+                            <li>Notifications <br/><span>_</span></li>
+                            <li>Time tracking <br/><span>_</span></li>
+                            <li>Custom views</li>
+                        </ul>
+                        <a href="" class="button-price button-price-premium">Choose</a>
+                    </div>
+                </div>
+            </div>
+
+            <section class="default light white-section">
+                <h2 class="section-title">Premium</h2>
+                <h3 class="section-desc">Even more Features available</h3>
+                <div class="section-body premium-section">
+                    <div class="premium-slider">
+                        <div class="premium-slide container">
+                            <img src="media/livros.png" alt="">
+                            <div class="premium-info">
+                                <div class="firts-feature features">
+                                    <span><img src="assets/icons/check.png"></span>
+                                    <div class="text-premium-slide">
+                                        <h3>First Feature</h3>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non asperiores dolore ipsum sunt vitae expedita.</p>
+                                        <ul>
+                                            <li>Feature One</li>
+                                            <li>Feature Two</li>
+                                            <li>Feature Three</li>
+                                        
+                                        </ul>
+                                    </div>    
+                                </div>
+                                <div class="features">
+                                    <span><img src="assets/icons/check.png"></span><h3>Second Feature</h3>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+                                <div class="features">
+                                    <span><img src="assets/icons/check.png"></span><h3>Third Feature</h3>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="slider-pointers">
+                            <div class="points point-one-premium point-active-premium"></div>
+                            <div class="points point-two-premium"></div>
+                            <div class="points point-three-premium"></div>
+                        </div>
+
+                    </div>
     </main>
     <footer>
     </footer>
