--- a/index.html
+++ b/index.html
@@ -248,12 +248,16 @@
             </div>
         </section>
 
-        <section class="default dark section-our-team">
+        <section class="default dark bg-team">
+            <div class="section-team-area">
                 <h2 class="section-title">Our Team</h2>
                 <h3 class="section-desc">Our Co-Workers</h3>
-                <div class="section-body">
-                    
+                <div class="section-body container">
+                    <div class="section-team">
+
+                    </div>
                 </div>
+            </div>
         <section>
 
     </main>
