update people of our team

--- a/index.html
+++ b/index.html
@@ -256,7 +256,18 @@
                     <div class="sliders">
                         <div class="slide" style="margin-left: 0;">
                             <div class="slide-area">
-                                
+                                <img class="person-photo" src="media/mulher1.png" alt="">
+                                <h5>Jane Doe</h5>
+                                <h6>Master Mind</h6>
+                                <div class="social-media-person">
+                                    <span><img src="assets/icons/twitter.png"></span>
+                                    <span><img src="assets/icons/instagram.png"></span>
+                                    <span><img src="assets/icons/linkedin.png"></span>
+                                    <span><img src="assets/icons/facebook.png"></span>
+                                    <span><img src="assets/icons/youtube (1).png"></span>
+                                    <span><img src="assets/icons/googleplus.png"></span>
+                                    <span><img src="assets/icons/mais-opcoes.png"></span>
+                                </div>
                             </div>      
                         </div>
         
