--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <a href="index.html"><img class="site-icon" src="assets/icons/logo-awax.png" alt="Logo do Site"></a>
             <nav>
                 <ul class="menu-list">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Our Projects</a></li>
-                    <li><a href="">Our Team</a></li>
-                    <li><a href="">Happy Clients</a></li>
-                    <li><a href="">Price</a></li>
-                    <li><a href="">Some Facts</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="#banner">Home</a></li>
+                    <li><a href="#about-us">About Us</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#our-projects">Our Projects</a></li>
+                    <li><a href="#our-team">Our Team</a></li>
+                    <li><a href="#happy-clients">Happy Clients</a></li>
+                    <li><a href="#price">Price</a></li>
+                    <li><a href="#some-facts">Some Facts</a></li>
+                    <li><a href="#contact-us">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="menu-button">
@@ -33,7 +33,7 @@
         </div>
     </header>
     <main>
-        <section class="banner">
+        <section class="banner" id="banner">
             <div class="sliders">
                 <div class="slide" style="margin-left: 0;">
                     <div class="slide-area">
@@ -76,7 +76,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section class="default light" id="about-us">
             <h2 class="section-title">About Us</h2>
             <h3 class="section-desc">Who we are?</h3>
             <div class="section-body container">
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <section class="default dark">
+        <section class="default dark" id="services">
             <h2 class="section-title">Services</h2>
             <h3 class="section-desc">Services that we provide</h3>
             <div class="section-body container">
@@ -122,7 +122,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section class="default light" id="our-projects">
             <h2 class="section-title">Our Project</h2>
             <h3 class="section-desc">What We Create</h3>
             <div class="section-body container">
@@ -253,7 +253,7 @@
             </div>
         </section>
 
-        <section class="default dark section-our-team">
+        <section class="default dark section-our-team" id="our-team">
             <div class="our-team-background">
                 <h2 class="section-title">Our Team</h2>
                 <h3 class="section-desc">Our Co-Workers</h3>
@@ -319,7 +319,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section class="default light" id="happy-clients">
             <h2 class="section-title">Happy Clients</h2>
             <h3 class="section-desc">Clients Review</h3>
             <div class="section-body section-clients">
@@ -351,7 +351,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section class="default light" id="price">
             <h2 class="section-title">Price</h2>
             <h3 class="section-desc">Pricing Table</h3>
             <div class="section-body container">
@@ -458,7 +458,7 @@
             </section>
 
                 
-        <section class="default dark section-some-facts">
+        <section class="default dark section-some-facts" id="some-facts">
             <h2 class="section-title">Some Facts</h2>
             <h3 class="section-desc">About Our Work</h3>
             <div class="section-body container">
@@ -533,7 +533,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section class="default light" id="contact-us">
             <h2 class="section-title">Contact Us</h2>
             <h3 class="section-desc">Our Agency Located in, Melbourne, Australia</h3>
             <div class="section-body container">
